--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,39 @@
 ---
+dist: xenial
 language: ruby
+cache: bundler
+before_install:
+  - bundle -v
+  - rm -f Gemfile.lock
+  - gem update --system $RUBYGEMS_VERSION
+  - gem --version
+  - bundle -v
+script:
+  - 'bundle exec rake $CHECK'
 bundler_args: --without system_tests
-script: "bundle exec rake validate && bundle exec rake lint && bundle exec rake spec SPEC_OPTS='--format documentation'"
+rvm:
+  - 2.5.3
+stages:
+  - static
+  - spec
+  - acceptance
 matrix:
   fast_finish: true
   include:
-  - rvm: 2.0.0
-    env: PUPPET_GEM_VERSION="~> 3.5" STRICT_VARIABLES="yes"
-  - rvm: 2.1
-    env: PUPPET_GEM_VERSION="~> 3.7" STRICT_VARIABLES="yes"
-  - rvm: 2.1
-    env: PUPPET_GEM_VERSION="~> 3.8" STRICT_VARIABLES="yes"
-  - rvm: 2.2
-    env: PUPPET_GEM_VERSION="~> 4.1" STRICT_VARIABLES="yes"
-  - rvm: 2.2
-    env: PUPPET_GEM_VERSION="~> 4.2" STRICT_VARIABLES="yes"
-  - rvm: 2.3
-    env: PUPPET_GEM_VERSION="~> 4.9" STRICT_VARIABLES="yes"
-
+    -
+      env: CHECK="check:symlinks check:git_ignore check:dot_underscore check:test_file rubocop syntax lint metadata_lint"
+      stage: static
+    -
+      env: PUPPET_GEM_VERSION="~> 5.0" CHECK=parallel_spec
+      rvm: 2.4.5
+      stage: spec
+    -
+      env: PUPPET_GEM_VERSION="~> 6.0" CHECK=parallel_spec
+      rvm: 2.5.3
+      stage: spec
+branches:
+  only:
+    - master
+    - /^v\d/
 notifications:
   email: false
