--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,3 +1,6 @@
 fixtures:
-  symlinks:
-    barman: "#{source_dir}"
+  forge_modules:
+    cron_core: "puppetlabs/cron_core"
+    postgresql: "puppetlabs/postgresql"
+    sshkeys_core: "puppetlabs/sshkeys_core"
+    stdlib: "puppetlabs/stdlib"
