--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,13 @@
 fixtures:
   forge_modules:
-    cron_core: "puppetlabs/cron_core"
-    postgresql: "puppetlabs/postgresql"
-    sshkeys_core: "puppetlabs/sshkeys_core"
-    stdlib: "puppetlabs/stdlib"
+    apt:
+      repo: puppetlabs/apt
+      ref: 7.7.1
+    cron_core: puppetlabs/cron_core
+    postgresql:
+      repo: puppetlabs/postgresql
+      ref: 7.5.0
+    sshkeys_core: puppetlabs/sshkeys_core
+    stdlib:
+      repo: puppetlabs/stdlib
+      ref: 7.1.0
