--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,6 @@ jobs:
         run: bundle exec rake spec
       - name: Rubocop
         run: bundle exec rake rubocop
-      - name: Lint
-        run: bundle exec rake lint
+      #- name: Lint
+      #  run: bundle exec rake lint
 
