--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,7 +2,9 @@ fixtures:
   forge_modules:
     apt: puppetlabs/apt
     cron_core: puppetlabs/cron_core
-    postgresql: puppetlabs/postgresql
+    postgresql:
+      repo: puppetlabs/postgresql
+      ref: 8.3.0
     sshkeys_core: puppetlabs/sshkeys_core
     stdlib: puppetlabs/stdlib
     yumrepo_core: puppetlabs/yumrepo_core
