Support stdlib 9.x and postgresql 9.x

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,11 +3,8 @@ fixtures:
     apt: puppetlabs/apt
     cron_core: puppetlabs/cron_core
     concat: puppetlabs/concat
-    postgresql:
-      repo: puppetlabs/postgresql
-      ref: 7.5.0
+    postgresql: puppetlabs/postgresql
     sshkeys_core: puppetlabs/sshkeys_core
-    stdlib:
-      repo: puppetlabs/stdlib
-      ref: 8.6.0
+    stdlib: puppetlabs/stdlib
+    systemd: puppet/systemd
     yumrepo_core: puppetlabs/yumrepo_core
