--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,12 +8,26 @@ env:
   BUNDLE_WITHOUT: release
 
 jobs:
+  rubocop:
+    env:
+      BUNDLE_WITHOUT: release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Ruby ${{ matrix.ruby }}
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.1"
+          bundler-cache: true
+      - name: Run Rubocop
+        run: bundle exec rake rubocop
   test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         ruby:
+          - "3.1"
           - "3.0"
           - "2.7"
         puppet:
@@ -35,8 +49,11 @@ jobs:
           bundler-cache: true
       - name: Run tests
         run: bundle exec rake spec
-      - name: Rubocop
-        run: bundle exec rake rubocop
-      #- name: Lint
-      #  run: bundle exec rake lint
-
+  tests:
+    needs:
+      - rubocop
+      - test
+    runs-on: ubuntu-latest
+    name: Test suite
+    steps:
+      - run: echo Test suite completed
