--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       BUNDLE_WITHOUT: release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install Ruby ${{ matrix.ruby }}
         uses: ruby/setup-ruby@v1
         with:
@@ -21,6 +21,19 @@ jobs:
           bundler-cache: true
       - name: Run Rubocop
         run: bundle exec rake rubocop
+  lint:
+    env:
+      BUNDLE_WITHOUT: release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Ruby ${{ matrix.ruby }}
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.1"
+          bundler-cache: true
+      - name: Puppet Lint
+        run: bundle exec rake lint
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -41,7 +54,7 @@ jobs:
     env:
       PUPPET_VERSION: ${{ matrix.puppet }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install Ruby ${{ matrix.ruby }}
         uses: ruby/setup-ruby@v1
         with:
@@ -52,6 +65,7 @@ jobs:
   tests:
     needs:
       - rubocop
+      - lint
       - test
     runs-on: ubuntu-latest
     name: Test suite
